--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -30,9 +30,7 @@
     font-size: 1.25rem;
     line-height: 1.75rem;
     font-weight: bold;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    overflow: hidden;
+    overflow-wrap: break-word;
     color: #fff;
 }
 .dark-theme #article .tanggal{
@@ -50,9 +48,7 @@
     font-size: 1.25rem;
     line-height: 1.75rem;
     font-weight: bold;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+    overflow-wrap: break-word;
     color: #000;
 }
 .light-theme #article .tanggal{
